# cmake-tests

./: CMakeLists.txt
libweb/: CMakeLists.txt
libweb/include/libweb/: libweb.hh
libweb/src/: contact.cc  libweb.cc
logger/: CMakeLists.txt
logger/include/logger/: logger.hh
logger/src/: logger.cc
mainapp/: CMakeLists.txt  compile_defs.hh.in  main.cc
mainapp/res/: log4cplus.properties
projectlogger/: CMakeLists.txt
projectlogger/include/projectlogger/: logger.hh
projectlogger/src/: logger.cc
